[package]
name = "flake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*"}
clap_derive = { version = "*" }
colored = "2.1.0"
inkwell = { version = "0.3.0", features = ["llvm14-0"] }
itertools = "0.12.0"
macros = { path = "macros" }
serde = { version = "1.0.195", features = ["derive", "unstable"] }
serde_json = "1.0.111"

