[package]
name = "flake"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "flakec"
path = "src/main.rs"
required-features = ["clap-cli", "llvm-codegen"]


[dependencies]
clap = { version = "*", optional = true}
clap_derive = { version = "*", optional = true}
inkwell = { version = "0.4.0", features = ["llvm14-0"], optional = true}
itertools = "0.12.0"
macros = { path = "macros" }
serde = { version = "1.0.195", features = ["derive", "unstable"] }
serde_json = "1.0.111"
colored = "2.1.0"



[features]
default = ["ast", "eval", "lexer", "llvm-codegen", "clap-cli"]
ast = []
eval = []
lexer = []
llvm-codegen = ["inkwell"]
clap-cli = ["clap", "clap_derive"] 
stdio-pipeline = []
pretty-output = []

